<resources>
    <string name="app_name">Blood Bank Admin</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Login </string>
    <string name="action_forget_password">Forget password? </string>
    <string name="action_sign_in_short">Login </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="send_email">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_drawer">Schedule</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--jna3i-->
    <string name="action_logout">Logout</string>

    <string name="activity_schedule">Schedule</string>
    <string name="activity_campaign">Campaign</string>
    <string name="activity_notificationHistory">Notification History</string>
    <string name="activity_addOnSiteDonor">add OnSite Donor</string>
    <string name="activity_addCampaign">add Campaign</string>
    <string name="activity_sendNotification">send Notification</string>
    <string name="activity_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!--Yousiff-->
    <string name="view_Gender1">Gender</string>
    <string name="view_Editprofile">Edit Profile</string>
    <string name="view_Date_of_Birth">Birth Date</string>
    <string name="view_Branch_Name">Branch Name</string>
    <string name="view_ID">Civil ID</string>
    <string name="view_Email">Email</string>
    <string name="view_Phone">Phone</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

    <string name="EditProfile_Save">Save</string>
    <string name="EditProfile_Gender1">Gender</string>
    <string name="EditProfile_Gender2">Male/female</string>
    <string name="EditProfile_Date_of_Birth">Birth Date</string>
    <string name="EditProfile_Choose_Date_of_Birth">Choose a Date</string>
    <string name="ForgetP_please_enter">Please Enter your Email</string>


    <string name="EditProfile_Branch_Name">Branch Name</string>
    <string name="EditProfile_Civil_ID">Civil ID</string>
    <string name="EditProfile_Email">Email</string>
    <string name="EditProfile_Phone">Phone</string>
    <string name="EditProfile_title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_maps_activityaa">Map</string>

    <string name="setting_switchLangauge">Choose Language</string>

    <!--Monia-->
    <string name="notificationhistory">Notification History</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="notifidetails">notification Details</string>
    <string name="description">Description</string>
    <string name="sendnotify">Send</string>
    <string name="sendnotification">Send Notification</string>

    <!--Camp-->
    <string name="add_campaignName">Campaign Name:</string>
    <string name="add_Description">Description:</string>
    <string name="add_Location">Location:</string>
    <string name="add_Date">Date:</string>
    <string name="add_from">From</string>
    <string name="add_To">To</string>
    <string name="add_ADD">ADD</string>
    <string name="edit_campaignName">Campaign Name</string>
    <string name="edit_Description">Description</string>
    <string name="edit_Location">Location</string>
    <string name="edit_Date">Date</string>
    <string name="edit_save">Save</string>
    <string name="info_Edit">Edit</string>

    <!--others-->
    <string name="period_info">Period #</string>
    <string name="splash_bloodbank">Blood Bank</string>
    <string name="one_cell_period_info_type">Type</string>
    <string name="one_cell_period_info_fnameLname">First name Last name</string>

    <string name="sched_period1">Period 1</string>
    <string name="sched_period2">Period 2</string>
    <string name="sched_period3">Period 3</string>
    <string name="sched_period4">Period 4</string>
    <string name="sched_period5">Period 5</string>
    <string name="activity_Profile">Profile</string>
    <string name="ForgetP_please_enter_civilId">Civil ID</string>
    <string name="activity_bloodRequests">Blood Requests</string>
    <string name="Info_BloodRequest">Request Information</string>
    <string name="AddDonor_title">Add Donor</string>
    <string name="AddCampaign_title">Add Campaign</string>
    <string name="SendNotification_title">Send Notification</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Birthdate">Birthdate</string>
    <string name="Next_button">Next</string>
    <string name="Date">Date</string>
    <string name="Toast_AddDonor_Successfully">Add Donor Successfully!</string>
    <string name="Toast_Add_Successfully_ID">Add Donor  Successfuly! id =</string>
    <string name="Toast_Camp_Added">Campaign Added Successfuly!</string>
    <string name="Toast_AddOnSiteDonor">Add OnSite Donor</string>
    <string name="Toast_welcome">Welcome</string>
    <string name="Enter">Enter</string>


</resources>
