<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/activity_schedule" />
        <item
            android:id="@+id/nav_campaign"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/activity_campaign" />
        <item
            android:id="@+id/nav_notificationHistory"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/activity_notificationHistory" />
        <item
            android:id="@+id/nav_addOnSiteDonor"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/activity_addOnSiteDonor" />

        <item
            android:id="@+id/nav_addCampaign"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/activity_addCampaign" />

        <item
            android:id="@+id/nav_sendNotification"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/activity_sendNotification" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/activity_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_logout" />
    </group>


</menu>
