<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pifss.bbadmin.Notification_Send">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBar"
        android:id="@+id/toolbar"></android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/Notification_send_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:padding="20sp"
            android:textSize="14sp"
            android:layout_margin="20sp"
            android:hint="@string/title"
            android:inputType="textPersonName" />


    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout6"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textInputLayout"
        android:layout_alignParentStart="true">


        <EditText
            android:id="@+id/Notification_send_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:textSize="14sp"
            android:layout_margin="20sp"
            android:padding="20sp"
            android:hint="@string/description"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/notification_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#eefacaca"
        android:layout_margin="20sp"
        android:text="@string/sendnotify"
        android:layout_below="@+id/textInputLayout6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp" />

</RelativeLayout>
