<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pifss.bbadmin.ViewProfile">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/viewProfile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorToolBar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/a_minus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/handbloodlogo"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/appBarLayout"
        android:layout_toStartOf="@+id/textViewName"
        android:layout_marginEnd="19dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:text="Khaled Hossni"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/a_minus"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewName"
        android:layout_alignStart="@+id/textViewName"
        android:layout_alignTop="@+id/a_minus"
        android:textColor="@color/colorWHITE"
        android:background="@drawable/button_shape"
        android:text="@string/view_Editprofile" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a_minus"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/a_minus"
            android:orientation="vertical">

            <android.support.v7.widget.FitWindowsLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/Gender1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@mipmap/genders"
                    android:drawablePadding="10dp"
                    android:text="@string/EditProfile_Gender1"
                    android:textColor="@color/colorRED"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.FitWindowsLinearLayout>

            <EditText
                android:id="@+id/Gender2"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Gender1"
                android:layout_marginLeft="30dp"
                android:layout_toEndOf="@+id/Gender1"
                android:text="gender"
                android:textSize="13dp"
                android:transitionName="@string/faw_male"
                android:editable="false"
                android:theme="@style/NoLineColor"/>

            <android.support.v7.widget.FitWindowsLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/ab_plus"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@mipmap/calendargrey" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/Gender1"
                    android:layout_below="@+id/Gender2"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Birthdate"
                    android:textColor="@color/colorRED"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:transitionName="@string/view_Date_of_Birth" />
            </android.support.v7.widget.FitWindowsLinearLayout>

            <EditText
                android:id="@+id/textViewDate"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView35"
                android:layout_marginLeft="30dp"
                android:layout_toEndOf="@+id/Gender2"
                android:editable="false"
                android:text="YYYY-MM-DD"
                android:textSize="13dp"
                android:theme="@style/NoLineColor"/>


            <android.support.v7.widget.FitWindowsLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/b_minus"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@mipmap/envelope" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView35"
                    android:layout_below="@+id/textViewDate"
                    android:layout_marginLeft="10dp"
                    android:text="@string/view_Email"
                    android:textColor="@color/colorRED"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:transitionName="@string/view_Email" />
            </android.support.v7.widget.FitWindowsLinearLayout>

            <EditText
                android:id="@+id/textViewEmail"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textViewPhone"
                android:layout_below="@+id/textView37"
                android:layout_marginLeft="30dp"
                android:text="email@email.com"
                android:textSize="13dp"
                android:editable="false"
                android:theme="@style/NoLineColor"/>

            <android.support.v7.widget.FitWindowsLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/o_minus"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@mipmap/phone" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView37"
                    android:layout_below="@+id/textViewEmail"
                    android:layout_marginLeft="10dp"
                    android:text="@string/view_Phone"
                    android:textColor="@color/colorRED"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:transitionName="@string/view_Phone" />


            </android.support.v7.widget.FitWindowsLinearLayout>

            <EditText
                android:id="@+id/textViewPhone"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView39"
                android:layout_marginLeft="30dp"
                android:layout_toEndOf="@+id/textView35"
                android:text="12345678"
                android:textSize="13dp"
                android:editable="false"
                android:theme="@style/NoLineColor"/>

            <android.support.v7.widget.FitWindowsLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@mipmap/location" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView39"
                    android:layout_below="@+id/textViewPhone"
                    android:layout_marginLeft="10dp"
                    android:text="@string/view_Branch_Name"
                    android:textColor="@color/colorRED"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:transitionName="@string/view_Branch_Name" />
            </android.support.v7.widget.FitWindowsLinearLayout>

            <EditText
                android:id="@+id/textViewBranch"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView41"
                android:layout_marginLeft="30dp"
                android:layout_toEndOf="@+id/textView41"
                android:text="branch"
                android:textSize="13dp"
                android:editable="false"
                android:theme="@style/NoLineColor"/>

            <android.support.v7.widget.FitWindowsLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@mipmap/id" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView41"
                    android:layout_below="@+id/textViewBranch"
                    android:layout_marginLeft="10dp"
                    android:text="@string/view_ID"
                    android:textColor="@color/colorRED"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:transitionName="@string/view_ID" />
            </android.support.v7.widget.FitWindowsLinearLayout>

            <EditText
                android:id="@+id/textViewID"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView41"
                android:layout_marginLeft="30dp"
                android:layout_toEndOf="@+id/textView41"
                android:editable="false"
                android:text="123456789012"
                android:textSize="13dp"
                android:theme="@style/NoLineColor"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
